# pylox

./: .dir-locals.el  .envrc  .gitignore  .pre-commit-config.yaml  README.md  README.org  flake.nix  manifest.scm  pyproject.toml  shell.nix
.github/blocks/: config.json
.helix/: languages.toml
docs/: grammar.org
examples/: c-style-comments.lox  controlflow.lox  functions.lox
pylox/: __init__.py  ast_printer.py  callable.py  environment.py  error.py  expr.py  function.py  interpreter.py  lox_return.py  parser.py  pygments.py  scanner.py  stmt.py  token.py  token_type.py
