[tool.poetry]
name = "pylox"
version = "0.1.0"
description = "A Python implementation of the Lox language"
authors = ["Guillaume Pagnoux <gpagnoux@gmail.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pylsp-mypy = "^0.6.7"
python-lsp-server = "^1.7.4"
pyupgrade = "^3.10.1"
ruff-lsp = "^0.0.45"

[tool.poetry.scripts]
pylox = "pylox:main"

[tool.ruff]
fix = true
lint.select = [ "E", "F", "I", "UP" ]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
